<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".UserSignup">

    <TextView
        android:id="@+id/signupTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User Sign up"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/usernameETxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupTxt"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent_white"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="Username"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray" />

    <EditText
        android:id="@+id/passwordETxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameETxt"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent_white"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="Password"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray" />

    <EditText
        android:id="@+id/homeGymETxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordETxt"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent_white"
        android:drawableLeft="@drawable/baseline_add_business_24"
        android:drawablePadding="20dp"
        android:hint="Home Gym"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray" />

    <Button
        android:id="@+id/createAccountBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/teal_200"
        android:layout_below="@id/homeGymETxt"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:text="Create my account" />
    <Button
        android:id="@+id/signupToLoginPageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/teal_200"
        android:layout_below="@id/createAccountBtn"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:text="To Login Page" />

</RelativeLayout>