...
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/likeBTN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/teal_200"
                        android:layout_alignParentEnd="true"
                        android:text="Like"
                        android:layout_marginStart="25dp"
...
